--- a/Config/Config.properties
+++ b/Config/Config.properties
@@ -1,6 +1,6 @@
 Browser=Chrome
 qaURL=https://accounts.lambdatest.com/login
 expectedTitle=Welcome - LambdaTest
-dashBoardText=Dashboard1
+dashBoardText=Dashboard
 userName=chandra.maneesh@gmail.com
 passWord=Sonimani@1
